# BayesFoundry-OfficeQA

./: .gitignore  CHANGELOG.md  LEARNINGS.md  PR_DESCRIPTION.md  README.md  analyze_run.py  arena.yaml  experiment_log_2026-03-17.md  experiment_log_2026-03-18.md  pyproject.toml  reflection-2026-03-21.md  reflection-2026-04-02.md  self_improve.py
experiment_logs/: analysis_2026-04-01_run_review.md  diagnosis_2026-04-02_run-62221e.md  diagnosis_2026-04-02_run-cb4f99.md  experiment_log_2026-03-18.md  proposal_2026-03-19_gap_analysis.md  proposal_2026-03-30_improvement_experiments.md  proposal_2026-03-31_sample_analysis.md  proposal_2026-03-31_speed_optimization.md  proposal_2026-04-02_recursive_language_models.md
mcp_server/: __init__.py  __main__.py  table_parser.py
prompts/: officeqa_prompt.j2
skills/: 01_corpus_structure.md  04_question_patterns.md  05_external_knowledge.md  06_statistical_operations.md  07_table_types.md  answer_patterns.md  extract.py  financial_terms.md  latest.py  mcp_tools_guide.md  python_calculations.md  search.py  skill_loader.py  treasury_bulletin_guide.md  treasury_terminology.md  visual_analysis.md
skills/answer-patterns/: SKILL.md
skills/external-knowledge/: SKILL.md
skills/fiscal-year-dates/: SKILL.md
skills/mcp-tools/: SKILL.md
skills/mcp-tools-guide/: SKILL.md
skills/mcp_servers/: treasury_mcp_server.py
skills/number-parsing/: SKILL.md
skills/python-calculations/: SKILL.md
skills/sub-llm-verification/: SKILL.md
skills/treasury-terminology/: SKILL.md
skills/visual-analysis/: SKILL.md
tests/: test_mcp_tools.py
