[project]
name = "my-grounded-reasoning-agent"
version = "0.1.0"
description = "Arena agent for grounded-reasoning"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
officeqa-mcp = "mcp_server.__main__:mcp.run"

[tool.uv]
package = true

# Arena SDK is installed in the Docker environment during submission
# [tool.uv.sources]
# arena-sdk = { git = "https://github.com/sentient-agi/arena.git", subdirectory = "projects/arena_sdk" }
